--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+node/__debug_bin/
+client/__debug_bin/
+vendor/
+.mocha/node_modules/
+.vscode/
+.idea/
+target/
+build/
+release/
+bin/
